k8s/observability/uptime-kuma/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-observability-https
  namespace: observability
spec:
  redirectScheme:
    scheme: https
    permanent: true
