k8s/observability/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: observability
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
