k8s/observability/uptime-kuma/ingressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-https
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.__FRONTEND_HOST__`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: observability-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-http
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`status.__FRONTEND_HOST__`)
      kind: Rule
      middlewares:
        - name: redirect-observability-https
      services:
        - name: uptime-kuma
          port: 3001
